<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reto1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_biografia"
        android:name="com.example.reto1.ui.biografia.BiografiaFragment"
        android:label="@string/menu_biografia"
        tools:layout="@layout/fragment_biografia" />

    <fragment
        android:id="@+id/nav_artistas"
        android:name="com.example.reto1.ui.artistas.ArtistasFragment"
        android:label="@string/menu_artistas"
        tools:layout="@layout/fragment_artistas" />
</navigation>